deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-challenge-type: "dns01"
    certmanager.k8s.io/acme-dns01-provider: "route53"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "bv"
    kubernetes.io/tls-acme: "true"
  labels:
    bosun.bazaarvoice.com/team: bulkteam
    bosun.bazaarvoice.com/service: scrumblr-app-service
    bosun.bazaarvoice.com/role: ingress
  name: scrumblr-ingress-bv
spec:
  rules:
  - host: scrumblr.eu-west-1a.bosun.qa.bazaarvoice.com
    http:
      paths:
      - path: /
        backend:
          serviceName: scrumblr-app-service
          servicePort: 8080
  tls:
  - hosts:
    - scrumblr.eu-west-1a.bosun.qa.bazaarvoice.com
    secretName: scrumblr-tls-bv
